removed commented out code, improved expand animation (*fix collapse)

--- a/style/home.css
+++ b/style/home.css
@@ -8,6 +8,29 @@ vertical-align: baseline;
 background: transparent;
 font-family: sans-serif;
 }
+#belowHeader .projectContainer .projDetails{
+    width:100%;
+    text-align: justify;
+    text-justify: left;
+    position: relative;
+    top:0px;
+    max-height:0px;
+    overflow: hidden;
+    -webkit-transition:max-height, 0.4s;
+    -moz-transition: max-height, 0.4s;
+    -ms-transition: max-height, 0.4s;
+    -o-transition: max-height, 0.4s;
+    transition: max-height, 0.4s;
+}
+    #belowHeader .projectContainer .projDetails.expandDetails{
+    width:100%;
+    max-height:500px;
+    -webkit-transition:max-height, 0.4s;
+    -moz-transition: max-height, 0.4s;
+    -ms-transition: max-height, 0.4s;
+    -o-transition: max-height, 0.4s;
+    transition: max-height, 0.4s;
+    }
 @media screen and (min-width:1024px){
 #frozenHeader{
 background-color: #ffffff;
@@ -57,15 +80,6 @@ z-index: 10;
  background-color:lightgray;
 }
 
-/*
-.popbox{
- display:none;
- position: absolute;
- z-index:999;
- -webkit-box-shadow: 0px 0px 5px 0px rgba(164, 164, 164, 1);
- box-shadow: 0px 0px 5px 0px rgba(164, 164, 164, 1);
-}
-*/
 #aboutContainer{
  opacity:0.9;
  position: relative;
@@ -135,7 +149,6 @@ z-index: 10;
            /*visibility: hidden;*/
            /*border-bottom: 1px dotted lightgray;*/
            width:100%;
-          
            text-align: justify;
            text-justify: left;
            position: relative;
@@ -330,7 +343,8 @@ z-index: 10;
             position:relative;
             width:100%;
             padding-top:5px;
-            border-bottom: 1px dotted lightgray;
+            border: 1px dotted lightgray;
+            
         }
 
 }
@@ -375,7 +389,7 @@ z-index: 10;
         position:relative;
     }
         #aboutContainer .picContainer{
-            width:200px;
+            width:150px;
             margin: 0 auto;
         }
             #aboutContainer .picContainer img{
@@ -468,37 +482,10 @@ z-index: 10;
             position:relative;
             width:100%;
             padding-top:5px;
-            border-bottom: 1px dotted lightgray;
+            border: 1px dotted lightgray;
         }
 }
-/*@media screen and (max-width:500px){
-    #frozenHeader{
-background-color: #000000;
-height:120px;
-position:fixed;
-top:0;
-width:220px;
-z-index: 10;
-}
-    #frozenHeader h1{
-     color:#ffffff;
-     font-size:27px;
-     padding: 10px;
-     padding-right: 20px;
-     float:left;
-    }
-    #frozenHeader #resumeLink{
-     height:50px;
-     width:200px;
-     position: relative;
-     left: 10px;
-     color:#ffffff; 
-     float:right;
-     font-size:16px;
-     text-decoration: none;
-     text-align:center;
-    }
-}*/
+
 .moveLogo{
     transform: translate(-275px, 0px);
     transition:translate 2s linear;
